--- a/css/portfoliostylesheet.css
+++ b/css/portfoliostylesheet.css
@@ -1,9 +1,155 @@
+
+
+/* SideBar-CSS */
+
+#SideBar-Info{
+    background-color: #CBB192;
+    border-radius: 1rem;
+    box-sizing: border-box;
+    align-self: flex-start;
+    flex-direction: column;
+}
+
+#SideBar-Info h4{
+    text-align: center;
+    margin-top: 1rem;
+}
+
+#SideBar-Info ul{
+    margin-bottom: 1rem;
+    padding: 1rem;
+}
+
+.contact-list{
+    list-style: none;
+}
+
+.contact-list li{
+    color: #3B2F2F;
+    padding-bottom: 1rem;
+}
+
+.contact-list li i{
+    font-size: 1.25rem;
+    margin-right: 0.5rem;
+}
+
+.contact-list a{
+    color: #3B2F2F;
+}
+
+.contact-list a:hover{
+    color: teal;
+}
+
+/* Body Styling */
 body{
+    background-color:#FFF8F0;
+    padding-top: 6rem;
+}
+
+h1, h2, h3, h4, h5{
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    padding: 1rem;
+}
+
+section{
+    padding: 1rem;
+}
+
+p{
+    color: #3B2F2F;
+    padding: 1rem;
+    font-family:Arial, Helvetica, sans-serif
 }
 
 
+
+/* NavBar Styling */
 .navbar{
+    background-color: #FFF8F0;
+    padding: 1rem 2rem;
+}
+
+.navbar .navbar-brand{
+    font-size: x-large;
+}
+
+.navbar-nav{
+    font-size: large;
+    gap: 2rem;
+    align-items: center;
+}
+
+/* Project Section CSS */
+.row .project{
+    padding: 1rem;
+}
+
+.project-type{
+    font-size: 1.5rem;
+    font-weight: lighter;
+}
+
+#UserImg{
+    border-radius: 10rem;
 }
 
 
+.project-imgs{
+    width: 100%;
+    height: 140px;
+    object-fit: contain;
+    padding: 1rem;
+}
 
+@media (min-width: 768px) {
+    .project-imgs {
+      height: 360px;
+    }
+}
+
+/* Section CSS AboutMe */
+
+.aboutme-section{
+    padding: 1rem;
+}
+
+/* Education CSS */
+
+.education h2{
+    padding-bottom: 0;
+    font-weight: bold;
+}
+
+.education h3, h4{
+    padding-top: 0;
+    padding-bottom: 0;
+}
+
+.education h4{
+    color: gray;
+}
+
+
+/* Skill Section CSS */
+
+.skills{
+    padding:2rem;
+}
+
+
+.skills ul{
+    list-style: none;
+    padding:0;
+    gap: 1rem;
+}
+
+.skills ul li{
+    padding: 0.5rem;
+    border: 1px solid lightgray;
+    background-color: #CBB192;
+    background-clip: padding-box;
+    border-radius: 1rem;
+    font-weight: bold;
+}
